section endpoints fixed and tested